# capivara-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BROKER.md  guarantees.md
examples/: sync_task.rs
src/: app.rs  error.rs  job.rs  lib.rs  metrics.rs  metrics_http.rs  registry.rs  retry.rs  task.rs  task_sync.rs
src/broker/: memory.rs  mod.rs  rabbit.rs  redis_broker.rs
src/result/: memory.rs  mod.rs  redis_result.rs
src/worker/: mod.rs
tests/: memory_roundtrip.rs  metrics_http.rs  metrics_record.rs  rabbitmq_broker.rs  redis_broker.rs  task_sync_roundtrip.rs
