[package]
name = "capivara"
version = "0.0.1"
edition = "2024"
publish = false
rust-version = "1.85"
description = "Rust-idiomatic async job/worker library (Celery-like topology, typed Task API)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DavillyDevTeam/capivara-rs"
readme = "README.md"
keywords = ["queue", "worker", "jobs", "async", "tokio"]
categories = ["asynchronous", "network-programming"]
authors = ["Duarte Mainart Tecnologia e Publicidade LTDA"]

[features]
default = []
# Opt-in Redis broker + Redis result backend. Memory backends need no feature.
redis = ["dep:redis"]
# Opt-in Prometheus scrape HTTP server (`GET /metrics` on 127.0.0.1:9090 by default).
# Pulls `metrics-exporter-prometheus` + hyper; not enabled by default.
metrics-http = ["dep:metrics-exporter-prometheus"]

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
redis = { version = "0.27", optional = true, default-features = false, features = ["tokio-comp", "connection-manager", "script"] }
rand = "0.8"
metrics = "0.24"
# HTTP scrape only (no push-gateway / rustls). Used solely by `metrics-http`.
metrics-exporter-prometheus = { version = "0.18", optional = true, default-features = false, features = ["http-listener"] }

[lib]
name = "capivara"
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
# For Redis TTL assertions in integration tests (same feature set as optional dep).
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
metrics-util = { version = "0.20", default-features = false, features = ["debugging"] }

[[test]]
name = "redis_broker"
path = "tests/redis_broker.rs"
required-features = ["redis"]

[[test]]
name = "metrics_http"
path = "tests/metrics_http.rs"
required-features = ["metrics-http"]
