[package]
name = "capivara"
version = "0.0.1"
edition = "2024"
publish = false
rust-version = "1.85"
description = "Rust-idiomatic async job/worker library (Celery-like topology, typed Task API)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DavillyDevTeam/capivara-rs"
readme = "README.md"
keywords = ["queue", "worker", "jobs", "async", "tokio"]
categories = ["asynchronous", "network-programming"]
authors = ["Duarte Mainart Tecnologia e Publicidade LTDA"]

[features]
default = []
# Opt-in Redis broker + Redis result backend. Memory backends need no feature.
redis = ["dep:redis"]

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
redis = { version = "0.27", optional = true, default-features = false, features = ["tokio-comp", "connection-manager", "script"] }
rand = "0.8"

[lib]
name = "capivara"
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
# For Redis TTL assertions in integration tests (same feature set as optional dep).
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }

[[test]]
name = "redis_broker"
path = "tests/redis_broker.rs"
required-features = ["redis"]
